--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,16 @@
         android:singleLine="false"
         android:autoText="false"
         android:layout_gravity="bottom|center_horizontal"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:textAlignment="center" />
+
+    <Button
+        android:text="@string/turn_on"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/turnon"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:visibility="gone"
+        android:elevation="24dp" />
 
 </LinearLayout>
