appintro text style change main layout color change

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.golden.android.eyecare.MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/about_libraries_primary_dark">
 
     <ImageView
         android:layout_width="match_parent"
@@ -18,7 +19,10 @@
 
         android:layout_gravity="center_horizontal"
         android:contentDescription="@string/medalView"
-        android:layout_weight="4" />
+        android:layout_weight="4"
+        android:elevation="24dp"
+        android:adjustViewBounds="true"
+        android:cropToPadding="false" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -31,9 +35,13 @@
         android:textSize="50sp"
         android:layout_weight="1" />
 
+
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:id="@+id/textView"
         android:text="@string/scoreValue"
@@ -41,8 +49,8 @@
         android:singleLine="false"
         android:autoText="false"
         android:layout_gravity="bottom|center_horizontal"
-        android:layout_weight="1"
         android:textAlignment="center" />
+
 
     <Button
         android:text="@string/turn_on"
