--- a/app/src/main/res/layout/activity_reward.xml
+++ b/app/src/main/res/layout/activity_reward.xml
@@ -14,7 +14,7 @@
         android:textColor="#dfe0e2"
         android:textSize="60sp"
         android:layout_gravity="center_horizontal"
-        style="@style/Base.TextAppearance.AppCompat.Body1"
+        style="@style/AppIntroDefaultHeading"
         android:paddingTop="16sp"
         android:longClickable="false"
         android:linksClickable="false"
