--- a/app/src/main/res/drawable/ic_eye.xml
+++ b/app/src/main/res/drawable/ic_eye.xml
@@ -1,10 +1,24 @@
-<vector android:height="24dp" android:viewportHeight="512.0"
-    android:viewportWidth="512.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#EDEDED" android:pathData="M256,0C114.6,0 0,114.6 0,256c0,141.4 114.6,256 256,256s256,-114.6 256,-256C512,114.6 397.4,0 256,0z"/>
-    <path android:fillColor="#3DB39E" android:pathData="M256,112.6c79.2,0 143.4,64.2 143.4,143.4S335.2,399.4 256,399.4s-143.4,-64.2 -143.4,-143.4C112.6,176.8 176.8,112.6 256,112.6z"/>
-    <path android:fillColor="#324D5B" android:pathData="M256,184.3c39.6,0 71.7,32.1 71.7,71.7s-32.1,71.7 -71.7,71.7s-71.7,-32.1 -71.7,-71.7C184.3,216.4 216.4,184.3 256,184.3z"/>
-    <path android:fillColor="#9ED9CF" android:pathData="M307.2,169c17,0 30.7,13.8 30.7,30.7s-13.8,30.7 -30.7,30.7c-17,0 -30.7,-13.8 -30.7,-30.7S290.2,169 307.2,169z"/>
-    <path android:fillColor="#99A6AD" android:pathData="M321.5,226.9c-8.1,-18.2 -23.6,-32.4 -42.7,-38.8c-1.5,3.6 -2.3,7.5 -2.3,11.6c0,17 13.8,30.7 30.7,30.7C312.4,230.4 317.2,229.1 321.5,226.9z"/>
-    <path android:fillColor="#2B424D" android:pathData="M266.2,317.4c-39.6,0 -71.7,-32.1 -71.7,-71.7c0,-17.2 6.1,-32.9 16.1,-45.3c-16.1,13.1 -26.4,33.1 -26.4,55.5c0,39.6 32.1,71.7 71.7,71.7c22.4,0 42.4,-10.3 55.5,-26.4C299.2,311.4 283.4,317.4 266.2,317.4z"/>
-    <path android:fillColor="#37A18E" android:pathData="M266.2,389.1c-79.2,0 -143.4,-64.2 -143.4,-143.4c0,-37 14,-70.7 37,-96.1c-29,26.2 -47.2,64.2 -47.2,106.4c0,79.2 64.2,143.4 143.4,143.4c42.2,0 80.1,-18.2 106.4,-47.2C336.9,375.1 303.2,389.1 266.2,389.1z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="280dp"
+        android:height="280dp"
+        android:viewportWidth="280.028"
+        android:viewportHeight="280.028">
+    <path
+        android:pathData="M140.01,0c77.33,0 140.01,62.68 140.01,140.01c0,77.32 -62.68,140.01 -140.01,140.01S0,217.34 0,140.01C0,62.68 62.68,0 140.01,0z"
+        android:fillColor="#E4E7E7"/>
+    <path
+        android:pathData="M140.01,43.75c53.16,0 96.26,43.1 96.26,96.26c0,53.15 -43.1,96.26 -96.26,96.26s-96.26,-43.11 -96.26,-96.26C43.75,86.84 86.85,43.75 140.01,43.75z"
+        android:fillColor="#26A6D1"/>
+    <path
+        android:pathData="M140.01,87.5c28.99,0 52.51,23.5 52.51,52.51s-23.51,52.51 -52.51,52.51s-52.51,-23.5 -52.51,-52.51S111.02,87.5 140.01,87.5z"
+        android:fillColor="#324D5B"/>
+    <path
+        android:pathData="M179.39,87.5c12.09,0 21.88,9.79 21.88,21.88s-9.79,21.88 -21.88,21.88c-12.09,0 -21.88,-9.79 -21.88,-21.88S167.31,87.5 179.39,87.5z"
+        android:fillColor="#D4EDF6"/>
+    <path
+        android:pathData="M191.04,127.84c-3.54,-14.91 -13.41,-27.35 -26.66,-34.31c-4.21,3.98 -6.87,9.59 -6.87,15.85c0,12.09 9.79,21.88 21.88,21.88C183.69,131.25 187.66,129.98 191.04,127.84z"
+        android:fillColor="#D6DBDE"/>
+    <path
+        android:pathData="M148.76,227.51c-53.16,0 -96.26,-43.11 -96.26,-96.26c0,-24.35 9.12,-46.53 24.03,-63.48c-20.06,17.64 -32.78,43.42 -32.78,72.23c0,53.15 43.1,96.26 96.26,96.26c28.81,0 54.59,-12.72 72.23,-32.78C195.28,218.4 173.12,227.51 148.76,227.51z"
+        android:fillColor="#2296BD"/>
 </vector>
