--- a/app/src/main/res/layout/enterName.xml
+++ b/app/src/main/res/layout/enterName.xml
@@ -5,7 +5,7 @@
               xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="#222222"
+              android:background="@color/scenery"
               android:orientation="vertical">
 
     <TextView
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Enter Your Name"
+
 
 
         />
