--- a/app/src/main/res/layout/pain.xml
+++ b/app/src/main/res/layout/pain.xml
@@ -19,7 +19,9 @@
         android:textSize="@dimen/appIntroHeadingTextSize"
         android:layout_weight="2"
         android:gravity="center_horizontal"
-/>
+        style="@style/AppIntroDefaultHeading"
+
+        />
 
     <ImageView
     android:layout_width="match_parent"
