--- a/app/src/main/res/layout/pause.xml
+++ b/app/src/main/res/layout/pause.xml
@@ -19,6 +19,8 @@
         android:textSize="@dimen/appIntroHeadingTextSize"
         android:layout_weight="2"
         android:gravity="center_horizontal"
+        style="@style/AppIntroDefaultHeading"
+
         />
 
     <ImageView
