--- a/app/src/main/res/layout/pause.xml
+++ b/app/src/main/res/layout/pause.xml
@@ -30,7 +30,7 @@
         android:layout_weight="1"
 
         android:cropToPadding="false"
-        />
+        android:layout_margin="20dp" />
 
     <TextView
         android:text="@string/to_take_a_break_from_smartphone_click_on_yes"
