--- a/app/src/main/res/layout/activity_reward.xml
+++ b/app/src/main/res/layout/activity_reward.xml
@@ -3,7 +3,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E8CF13">
+    android:background="#E8CF13"
+
+    >
 
     <TextView
         android:layout_width="wrap_content"
@@ -48,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/scoreValue"
-            android:id="@+id/textView3"
+            android:id="@+id/ScoreValue"
             android:layout_weight="3"
             android:textSize="40dp"
             android:layout_marginLeft="16dp" />
