--- a/app/src/main/res/layout/reward.xml
+++ b/app/src/main/res/layout/reward.xml
@@ -30,8 +30,8 @@
         android:layout_margin="10dp"
         android:layout_weight="4"
         android:text="@string/great_job"
-        android:textAllCaps="true"
         android:textAlignment="center"
+        android:textAllCaps="true"
         android:textColor="@color/scenery"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -65,7 +65,7 @@
         <TextView
             android:id="@+id/ScoreValue"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="3"
             android:gravity="center_vertical|fill_horizontal"
             android:padding="5dp"
